metadata/objects/graxopportunityindex__x.object
<CustomObject>
    <description>graxopportunityindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxopportunityindex</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>AccountId</description>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>AccountId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId_grax_xf_account__c</fullName>
        <description>AccountId_grax_xf_account</description>
        <externalDeveloperName>AccountId_grax_xf_account</externalDeveloperName>
        <label>AccountId_grax_xf_account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>graxopportunityindex</relationshipLabel>
        <relationshipName>graxopportunityindex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account_Name</description>
        <externalDeveloperName>Account_Name</externalDeveloperName>
        <label>Account_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_c__c</fullName>
        <description>Account_Name__c</description>
        <externalDeveloperName>Account_Name__c</externalDeveloperName>
        <label>Account_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region_c__c</fullName>
        <description>Account_Region__c</description>
        <externalDeveloperName>Account_Region__c</externalDeveloperName>
        <label>Account_Region__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_c_GRAX_float__c</fullName>
        <description>Age__c_GRAX_float</description>
        <externalDeveloperName>Age__c_GRAX_float</externalDeveloperName>
        <label>Age__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_c__c</fullName>
        <description>Age__c</description>
        <externalDeveloperName>Age__c</externalDeveloperName>
        <label>Age__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Products_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All_Products__c</description>
        <externalDeveloperName>All_Products__c</externalDeveloperName>
        <label>All_Products__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount</description>
        <externalDeveloperName>Amount</externalDeveloperName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutoNumber_c__c</fullName>
        <description>AutoNumber__c</description>
        <externalDeveloperName>AutoNumber__c</externalDeveloperName>
        <label>AutoNumber__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boosting_Reason_c__c</fullName>
        <description>Boosting_Reason__c</description>
        <externalDeveloperName>Boosting_Reason__c</externalDeveloperName>
        <label>Boosting_Reason__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Approved_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Budget_Approved__c</description>
        <externalDeveloperName>Budget_Approved__c</externalDeveloperName>
        <label>Budget_Approved__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <description>CampaignId</description>
        <externalDeveloperName>CampaignId</externalDeveloperName>
        <label>CampaignId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignId_grax_xf_campaign__c</fullName>
        <description>CampaignId_grax_xf_campaign</description>
        <externalDeveloperName>CampaignId_grax_xf_campaign</externalDeveloperName>
        <label>CampaignId_grax_xf_campaign</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>Campaign_Name</description>
        <externalDeveloperName>Campaign_Name</externalDeveloperName>
        <label>Campaign_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_c__c</fullName>
        <description>Case__c</description>
        <externalDeveloperName>Case__c</externalDeveloperName>
        <label>Case__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_c_grax_xf_case__c</fullName>
        <description>Case__c_grax_xf_case</description>
        <externalDeveloperName>Case__c_grax_xf_case</externalDeveloperName>
        <label>Case__c_grax_xf_case</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_r_CaseNumber__c</fullName>
        <description>Case__r_CaseNumber</description>
        <externalDeveloperName>Case__r_CaseNumber</externalDeveloperName>
        <label>Case__r_CaseNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate_TODAY_c_GRAX_float__c</fullName>
        <description>CloseDate_TODAY__c_GRAX_float</description>
        <externalDeveloperName>CloseDate_TODAY__c_GRAX_float</externalDeveloperName>
        <label>CloseDate_TODAY__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloseDate_TODAY_c__c</fullName>
        <description>CloseDate_TODAY__c</description>
        <externalDeveloperName>CloseDate_TODAY__c</externalDeveloperName>
        <label>CloseDate_TODAY__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <description>CloseDate</description>
        <externalDeveloperName>CloseDate</externalDeveloperName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coaching_c__c</fullName>
        <description>Coaching__c</description>
        <externalDeveloperName>Coaching__c</externalDeveloperName>
        <label>Coaching__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_c_grax_xf_workcoaching__c</fullName>
        <description>Coaching__c_grax_xf_workcoaching</description>
        <externalDeveloperName>Coaching__c_grax_xf_workcoaching</externalDeveloperName>
        <label>Coaching__c_grax_xf_workcoaching</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_r_Name__c</fullName>
        <description>Coaching__r_Name</description>
        <externalDeveloperName>Coaching__r_Name</externalDeveloperName>
        <label>Coaching__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_c__c</fullName>
        <description>Competition__c</description>
        <externalDeveloperName>Competition__c</externalDeveloperName>
        <label>Competition__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Coach_c__c</fullName>
        <description>Competitive_Coach__c</description>
        <externalDeveloperName>Competitive_Coach__c</externalDeveloperName>
        <label>Competitive_Coach__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Competitive_Deal__c</description>
        <externalDeveloperName>Competitive_Deal__c</externalDeveloperName>
        <label>Competitive_Deal__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Mentioned_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Competitor_Mentioned__c</description>
        <externalDeveloperName>Competitor_Mentioned__c</externalDeveloperName>
        <label>Competitor_Mentioned__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_c__c</fullName>
        <description>Competitor__c</description>
        <externalDeveloperName>Competitor__c</externalDeveloperName>
        <label>Competitor__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_they_Mentioned_c__c</fullName>
        <description>Competitor_they_Mentioned__c</description>
        <externalDeveloperName>Competitor_they_Mentioned__c</externalDeveloperName>
        <label>Competitor_they_Mentioned__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_ROI_Analysis_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Complete_ROI_Analysis__c</description>
        <externalDeveloperName>Complete_ROI_Analysis__c</externalDeveloperName>
        <label>Complete_ROI_Analysis__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_RSU_Inclusion_c__c</fullName>
        <description>Confirmed_RSU_Inclusion__c</description>
        <externalDeveloperName>Confirmed_RSU_Inclusion__c</externalDeveloperName>
        <label>Confirmed_RSU_Inclusion__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <description>ConnectionReceivedId</description>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>ConnectionReceivedId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <description>ConnectionSentId</description>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>ConnectionSentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>ContactId</description>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>ContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City_c__c</fullName>
        <description>Contact_City__c</description>
        <externalDeveloperName>Contact_City__c</externalDeveloperName>
        <label>Contact_City__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Company_c__c</fullName>
        <description>Contact_Company__c</description>
        <externalDeveloperName>Contact_Company__c</externalDeveloperName>
        <label>Contact_Company__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country_c__c</fullName>
        <description>Contact_Country__c</description>
        <externalDeveloperName>Contact_Country__c</externalDeveloperName>
        <label>Contact_Country__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_c__c</fullName>
        <description>Contact_Email__c</description>
        <externalDeveloperName>Contact_Email__c</externalDeveloperName>
        <label>Contact_Email__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_c__c</fullName>
        <description>Contact_Name__c</description>
        <externalDeveloperName>Contact_Name__c</externalDeveloperName>
        <label>Contact_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_c__c</fullName>
        <description>Contact_Phone__c</description>
        <externalDeveloperName>Contact_Phone__c</externalDeveloperName>
        <label>Contact_Phone__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Postal_Code_c__c</fullName>
        <description>Contact_Postal_Code__c</description>
        <externalDeveloperName>Contact_Postal_Code__c</externalDeveloperName>
        <label>Contact_Postal_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State_Province_c__c</fullName>
        <description>Contact_State_Province__c</description>
        <externalDeveloperName>Contact_State_Province__c</externalDeveloperName>
        <label>Contact_State_Province__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street_c__c</fullName>
        <description>Contact_Street__c</description>
        <externalDeveloperName>Contact_Street__c</externalDeveloperName>
        <label>Contact_Street__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title_c__c</fullName>
        <description>Contact_Title__c</description>
        <externalDeveloperName>Contact_Title__c</externalDeveloperName>
        <label>Contact_Title__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_to_email_c__c</fullName>
        <description>Contact_to_email__c</description>
        <externalDeveloperName>Contact_to_email__c</externalDeveloperName>
        <label>Contact_to_email__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <description>ContractId</description>
        <externalDeveloperName>ContractId</externalDeveloperName>
        <label>ContractId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractId_grax_xf_contract__c</fullName>
        <description>ContractId_grax_xf_contract</description>
        <externalDeveloperName>ContractId_grax_xf_contract</externalDeveloperName>
        <label>ContractId_grax_xf_contract</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ContractNumber__c</fullName>
        <description>Contract_ContractNumber</description>
        <externalDeveloperName>Contract_ContractNumber</externalDeveloperName>
        <label>Contract_ContractNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_c__c</fullName>
        <description>Contract_End_Date__c</description>
        <externalDeveloperName>Contract_End_Date__c</externalDeveloperName>
        <label>Contract_End_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_c__c</fullName>
        <description>Contract_Start_Date__c</description>
        <externalDeveloperName>Contract_Start_Date__c</externalDeveloperName>
        <label>Contract_Start_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Terms_c__c</fullName>
        <description>Contract_Terms__c</description>
        <externalDeveloperName>Contract_Terms__c</externalDeveloperName>
        <label>Contract_Terms__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Name__c</fullName>
        <description>CreatedBy_Name</description>
        <externalDeveloperName>CreatedBy_Name</externalDeveloperName>
        <label>CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <description>CreatedDate__c</description>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>CreatedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_c__c</fullName>
        <description>Created_Date__c</description>
        <externalDeveloperName>Created_Date__c</externalDeveloperName>
        <label>Created_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators_c__c</fullName>
        <description>CurrentGenerators__c</description>
        <externalDeveloperName>CurrentGenerators__c</externalDeveloperName>
        <label>CurrentGenerators__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Amount_c_GRAX_float__c</fullName>
        <description>DB_Amount__c_GRAX_float</description>
        <externalDeveloperName>DB_Amount__c_GRAX_float</externalDeveloperName>
        <label>DB_Amount__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Amount_c__c</fullName>
        <description>DB_Amount__c</description>
        <externalDeveloperName>DB_Amount__c</externalDeveloperName>
        <label>DB_Amount__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Days_c_GRAX_float__c</fullName>
        <description>DB_Days__c_GRAX_float</description>
        <externalDeveloperName>DB_Days__c_GRAX_float</externalDeveloperName>
        <label>DB_Days__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Days_c__c</fullName>
        <description>DB_Days__c</description>
        <externalDeveloperName>DB_Days__c</externalDeveloperName>
        <label>DB_Days__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Center_Region_c__c</fullName>
        <description>Data_Center_Region__c</description>
        <externalDeveloperName>Data_Center_Region__c</externalDeveloperName>
        <label>Data_Center_Region__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimeCreated_c__c</fullName>
        <description>DateTimeCreated__c</description>
        <externalDeveloperName>DateTimeCreated__c</externalDeveloperName>
        <label>DateTimeCreated__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expire_c_GRAX_float__c</fullName>
        <description>Days_Left_Until_Expire__c_GRAX_float</description>
        <externalDeveloperName>Days_Left_Until_Expire__c_GRAX_float</externalDeveloperName>
        <label>Days_Left_Until_Expire__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expire_c__c</fullName>
        <description>Days_Left_Until_Expire__c</description>
        <externalDeveloperName>Days_Left_Until_Expire__c</externalDeveloperName>
        <label>Days_Left_Until_Expire__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Contract_Expiration_c__c</fullName>
        <description>Days_to_Contract_Expiration__c</description>
        <externalDeveloperName>Days_to_Contract_Expiration__c</externalDeveloperName>
        <label>Days_to_Contract_Expiration__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Ancillary_Amount_c__c</fullName>
        <description>Deal_Ancillary_Amount__c</description>
        <externalDeveloperName>Deal_Ancillary_Amount__c</externalDeveloperName>
        <label>Deal_Ancillary_Amount__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date_c__c</fullName>
        <description>Deal_Approved_Date__c</description>
        <externalDeveloperName>Deal_Approved_Date__c</externalDeveloperName>
        <label>Deal_Approved_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Forward_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deal_Forward__c</description>
        <externalDeveloperName>Deal_Forward__c</externalDeveloperName>
        <label>Deal_Forward__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_ID_c__c</fullName>
        <description>Deal_ID__c</description>
        <externalDeveloperName>Deal_ID__c</externalDeveloperName>
        <label>Deal_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Slowing_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deal_Slowing__c</description>
        <externalDeveloperName>Deal_Slowing__c</externalDeveloperName>
        <label>Deal_Slowing__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Source_c__c</fullName>
        <description>Deal_Source__c</description>
        <externalDeveloperName>Deal_Source__c</externalDeveloperName>
        <label>Deal_Source__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_boosting_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deal_boosting__c</description>
        <externalDeveloperName>Deal_boosting__c</externalDeveloperName>
        <label>Deal_boosting__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Role_c__c</fullName>
        <description>Decision_Role__c</description>
        <externalDeveloperName>Decision_Role__c</externalDeveloperName>
        <label>Decision_Role__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus_c__c</fullName>
        <description>DeliveryInstallationStatus__c</description>
        <externalDeveloperName>DeliveryInstallationStatus__c</externalDeveloperName>
        <label>DeliveryInstallationStatus__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Presentation_Date_c__c</fullName>
        <description>Demo_Presentation_Date__c</description>
        <externalDeveloperName>Demo_Presentation_Date__c</externalDeveloperName>
        <label>Demo_Presentation_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_to_Customer_Sale_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Direct_to_Customer_Sale__c</description>
        <externalDeveloperName>Direct_to_Customer_Sale__c</externalDeveloperName>
        <label>Direct_to_Customer_Sale__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Approved_c__c</fullName>
        <description>Discount_Approved__c</description>
        <externalDeveloperName>Discount_Approved__c</externalDeveloperName>
        <label>Discount_Approved__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_c_GRAX_float__c</fullName>
        <description>Discount__c_GRAX_float</description>
        <externalDeveloperName>Discount__c_GRAX_float</externalDeveloperName>
        <label>Discount__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_c__c</fullName>
        <description>Discount__c</description>
        <externalDeveloperName>Discount__c</externalDeveloperName>
        <label>Discount__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_c__c</fullName>
        <description>Distributor__c</description>
        <externalDeveloperName>Distributor__c</externalDeveloperName>
        <label>Distributor__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Close_Date_Delta_c_GRAX_float__c</fullName>
        <description>ED_Close_Date_Delta__c_GRAX_float</description>
        <externalDeveloperName>ED_Close_Date_Delta__c_GRAX_float</externalDeveloperName>
        <label>ED_Close_Date_Delta__c_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Close_Date_Delta_c__c</fullName>
        <description>ED_Close_Date_Delta__c</description>
        <externalDeveloperName>ED_Close_Date_Delta__c</externalDeveloperName>
        <label>ED_Close_Date_Delta__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes_c__c</fullName>
        <description>ED_Leading_Causes__c</description>
        <externalDeveloperName>ED_Leading_Causes__c</externalDeveloperName>
        <label>ED_Leading_Causes__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Outcome_c__c</fullName>
        <description>ED_Outcome__c</description>
        <externalDeveloperName>ED_Outcome__c</externalDeveloperName>
        <label>ED_Outcome__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Predicted_Close_Date_c__c</fullName>
        <description>ED_Predicted_Close_Date__c</description>
        <externalDeveloperName>ED_Predicted_Close_Date__c</externalDeveloperName>
        <label>ED_Predicted_Close_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ED_Prescription_c__c</fullName>
        <description>ED_Prescription__c</description>
        <externalDeveloperName>ED_Prescription__c</externalDeveloperName>
        <label>ED_Prescription__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body_c__c</fullName>
        <description>Email_Body__c</description>
        <externalDeveloperName>Email_Body__c</externalDeveloperName>
        <label>Email_Body__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject_c__c</fullName>
        <description>Email_Subject__c</description>
        <externalDeveloperName>Email_Subject__c</externalDeveloperName>
        <label>Email_Subject__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engage_Legal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Engage_Legal__c</description>
        <externalDeveloperName>Engage_Legal__c</externalDeveloperName>
        <label>Engage_Legal__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Meeting_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exec_Meeting__c</description>
        <externalDeveloperName>Exec_Meeting__c</externalDeveloperName>
        <label>Exec_Meeting__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <description>ExpectedRevenue</description>
        <externalDeveloperName>ExpectedRevenue</externalDeveloperName>
        <label>ExpectedRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Account__c</fullName>
        <externalDeveloperName>AccountId_grax_xf_account</externalDeveloperName>
        <label>External Account</label>
        <length>50</length>
        <referenceTo>graxaccountindex__x</referenceTo>
        <relationshipLabel>graxopportunityindex</relationshipLabel>
        <relationshipName>graxopportunityindex</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <description>External_ID__c</description>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalQuarter__c</fullName>
        <description>FiscalQuarter</description>
        <externalDeveloperName>FiscalQuarter</externalDeveloperName>
        <label>FiscalQuarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <description>FiscalYear</description>
        <externalDeveloperName>FiscalYear</externalDeveloperName>
        <label>FiscalYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal__c</fullName>
        <description>Fiscal</description>
        <externalDeveloperName>Fiscal</externalDeveloperName>
        <label>Fiscal</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <description>ForecastCategoryName</description>
        <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
        <label>ForecastCategoryName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <description>ForecastCategory</description>
        <externalDeveloperName>ForecastCategory</externalDeveloperName>
        <label>ForecastCategory</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarded_Lead_ID_c__c</fullName>
        <description>Forwarded_Lead_ID__c</description>
        <externalDeveloperName>Forwarded_Lead_ID__c</externalDeveloperName>
        <label>Forwarded_Lead_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXTaskFlag2_c__c</fullName>
        <description>GRAXTaskFlag2__c</description>
        <externalDeveloperName>GRAXTaskFlag2__c</externalDeveloperName>
        <label>GRAXTaskFlag2__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GRAXTaskFlag_c__c</fullName>
        <description>GRAXTaskFlag__c</description>
        <externalDeveloperName>GRAXTaskFlag__c</externalDeveloperName>
        <label>GRAXTaskFlag__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Keys__c</fullName>
        <description>GRAX_Execution_Unique_Keys</description>
        <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
        <label>GRAX_Execution_Unique_Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_GROSS_Monthly_Revenue_c__c</fullName>
        <description>GRAX_GROSS_Monthly_Revenue__c</description>
        <externalDeveloperName>GRAX_GROSS_Monthly_Revenue__c</externalDeveloperName>
        <label>GRAX_GROSS_Monthly_Revenue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRAX_GROSS_Total_Revenue_c__c</fullName>
        <description>GRAX_GROSS_Total_Revenue__c</description>
        <externalDeveloperName>GRAX_GROSS_Total_Revenue__c</externalDeveloperName>
        <label>GRAX_GROSS_Total_Revenue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRAX_Max_Term_c__c</fullName>
        <description>GRAX_Max_Term__c</description>
        <externalDeveloperName>GRAX_Max_Term__c</externalDeveloperName>
        <label>GRAX_Max_Term__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRAX_Net_Monthly_Revenue_c__c</fullName>
        <description>GRAX_Net_Monthly_Revenue__c</description>
        <externalDeveloperName>GRAX_Net_Monthly_Revenue__c</externalDeveloperName>
        <label>GRAX_Net_Monthly_Revenue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRAX_Services_Revenue_c__c</fullName>
        <description>GRAX_Services_Revenue__c</description>
        <externalDeveloperName>GRAX_Services_Revenue__c</externalDeveloperName>
        <label>GRAX_Services_Revenue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>